--- a/index.html
+++ b/index.html
@@ -1,5 +1,52 @@
+<DOCKTYPE HTML>
+
 <html>
-  <body>
-    <h1>テストだよぉ</h1>
-  </body>
+
+    <head>
+
+        <link rem="styleseet" href="style.css" type="text/css">
+
+        <title>適当ー</title>
+
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
+</head>
+
+    <body class="gosick">
+
+        <header>
+
+            <h1><a href="#"><img src="pictures/cat.png" alt="cat"></a>テストページだよーん</h1>
+
+            <nav>
+
+                <ul>
+
+                    <li class="current"><a href="#">ホーム</a></li>
+                    <li><a href="#">概要</a></li>
+                    <li><a href="#">テキトー</a></li>
+
+                </ul>
+
+            </nav>
+
+        </header>
+
+        <p>テストテストテスト</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h2>てすとををををw</h2>
+        <p>てきとー</p>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h5>ページの端です</h5>
+
+</body>
+
 </html>
