--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
     <head>
 
-        <style src="style.css"></style>
-        
+        <link rem="stylesheet" href="style.css" type="text/css">
         
         <title>適当ー</title>
 
