--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header>
 
-            <h1><a href="#"><img src="pictures/cat.png" alt="cat"></a>テストページだよーん</h1>
+            <h1><a href="#"><img src="pictures/cat.png" width="50" height="50" alt="cat"></a>テストページだよーん</h1>
 
             <nav>
 
