--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <link rem="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
         
         <title>適当ー</title>
 
