--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="style.css" type="text/css">
         
-        <title>適当ー</title>
+        <title>necodows&necolianのホームページ</title>
 
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
     </head>
