--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                     <li class="current"><a href="#">ホーム</a></li>
                     <li><a href="#">概要</a></li>
-                    <li><a href="#">テキトー</a></li>
+                    <li><a href="#">Scratch&raquo;</a></li>
 
                 </ul>
 
