--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header>
 
-            <h1><a href="#"><img src="pictures/cat.png" width="50" height="50" alt="cat"></a>テストページだよーん</h1>
+            <h1><a href="#"><img src="pictures/cat.png" width="50" height="50" alt="cat"></a>necodows</h1>
 
             <nav>
 
@@ -31,14 +31,14 @@
 
         </header>
 
-        <p>テストテストテスト</p>
+        <p>neconeconeco!!</p>
         <br>
         <br>
         <br>
         <br>
         <br>
 
-        <h2>てすとををををw</h2>
+        <h2>nekonekocecece</h2>
         <p>てきとー</p>
         <br>
         <br>
