--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="style.css" type="text/css">
         
-        <title>necodows&necolianのホームページ</title>
+        <title>ホームページ</title>
 
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
     </head>
@@ -15,7 +15,7 @@
 
         <header>
 
-            <h1><a href="#"><img src="pictures/cat.png" width="50" height="50" alt="cat"></a>necodows</h1>
+            <h1><a href="#"><img src="pictures/cat.png" width="50" height="50" alt="cat"></a>necolianが最初に作ったページ</h1>
 
             <nav>
 
@@ -31,15 +31,15 @@
 
         </header>
 
-        <p>neconeconeco!!</p>
+        <p>書くことがない!!</p>
         <br>
         <br>
         <br>
         <br>
         <br>
 
-        <h2>nekonekocecece</h2>
-        <p>てきとー</p>
+        <h2>Kakukoto is nothing</h2>
+        <p>だれかネタをくれぇ</p>
         <br>
         <br>
         <br>
